[package]
name = "gemini-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-stream = "0.3.5"
bincode = "1.3.3"
futures = "0.3.30"
log = "0.4.20"
mime = "0.3.17"
native-tls = "0.2.11"
openssl = "0.10.64"
petgraph = { version = "0.6.4", features = ["serde-1"] }
regex = "1.10.3"
rkyv = "0.7.44"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-stream = "0.1.14"
url = { version = "2.5.0", features = ["serde"] }
